# bigquery-data-quality-monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml  nightly-e2e.yml
bigquery-data-quality-monitoring/: README.md
bigquery-data-quality-monitoring/.github/workflows/: ci.yml
bigquery-data-quality-monitoring/config/: quality_config.yaml
bigquery-data-quality-monitoring/dbt/: dbt_project.yml
bigquery-data-quality-monitoring/dbt/macros/: quality_macros.sql
bigquery-data-quality-monitoring/dbt/models/staging/: schema.yml  stg_chicago_crime.sql
bigquery-data-quality-monitoring/dbt/tests/singular/: assert_no_future_incidents.sql
bigquery-data-quality-monitoring/sql/setup/: create_quality_log_table.sql
bigquery-data-quality-monitoring/sql/validation/: 01_completeness_checks.sql  02_uniqueness_checks.sql
bigquery-data-quality-monitoring/src/quality/: __init__.py
bigquery-data-quality-monitoring/tests/: test_checks.py
dbt/: profiles.yml
dbt/models/marts/: mart_daily_crime_summary.sql  mart_district_analysis.sql
dbt/tests/singular/: assert_updated_on_after_incident.sql  assert_year_matches_date.sql
sql/validation/: 03_validity_checks.sql  04_consistency_checks.sql
src/: __init__.py  checks.py  connector.py  runner.py
src/quality/: checks.py  reporter.py
tests/: conftest.py  test_reporter.py
tests/contract/: test_bad_data_regression.py
tests/fixtures/: bad_data_catalog.csv
tests/integration/: cleanup.py  test_bigquery_smoke.py
tests/unit/: test_checks.py  test_connector.py
