[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigquery-data-quality-monitoring"
version = "0.1.0"
description = "Data quality monitoring framework for Google BigQuery"
readme = "README.md"
authors = [{name = "Fabiana Grisel González"}]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bigquery", "data-quality", "monitoring", "data-engineering", "qa"]

# ============================================================
# Black — opinionated formatter
# ============================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

# ============================================================
# Ruff — fast linter (replaces flake8, isort, pyupgrade, etc.)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # bandit (security)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert used (fine in tests)
    "E501",  # line-too-long (Black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # allow asserts and test creds

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================
# mypy — static type checking
# ============================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================
# pytest — test runner config
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "unit: fast, isolated unit tests (default)",
    "integration: tests that hit a real BigQuery sandbox",
    "contract: data-quality regression fixtures",
    "e2e: end-to-end smoke tests",
    "slow: tests that take >5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

# ============================================================
# Bandit — security linter
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
